# rusty-goose

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
src/: main.rs
